<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/navigation_subheader"
            android:title="@string/warehouse_menu1">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/navigation_sub_item1"
                        android:icon="@drawable/ic_storage_box"
                        android:title="@string/warehouse_menu2" />
                    <item
                        android:id="@+id/navigation_sub_item2"
                        android:icon="@drawable/ic_storage_box"
                        android:title="@string/warehouse_menu2" />
                </group>
            </menu>
        </item>
    </group>
</menu>